More closely mimicing structure of main.

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ include_package_data=True
 
 [options.entry_points]
 console_scripts =
-    abbot = abbot:__main__
+    abbot = bot:__main__
 
 [options.package_data]
 * = *.md
